--- a/app/src/main/res/layout/content_wash_bottomsheet.xml
+++ b/app/src/main/res/layout/content_wash_bottomsheet.xml
@@ -42,10 +42,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/roboto_light"
-        android:text="@string/label_clothes_type"
+        android:text="@string/label_bags_type"
         android:textColor="@color/colorTextWhite87"
         android:textSize="20sp"
-        tools:text="Coloque a quantidade de roupas" />
+        tools:text="Quantas bags será?" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_quantity_clothes"
@@ -54,16 +54,30 @@
         android:layout_below="@id/tv_label_quantity"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="5dp"
         android:background="@null"
-        android:focusable="true"
         android:fontFamily="@font/roboto_light"
         android:hint="@string/label_quantity"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         android:textColor="@color/colorTextWhite87"
         android:textColorHint="@color/colorTextWhite54"
         android:textCursorDrawable="@drawable/editext_cursor"
         android:textSize="20sp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_label_title_bags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_label_quantity"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/et_quantity_clothes"
+        android:fontFamily="@font/roboto_light"
+        android:text="bag"
+        android:textColor="@color/colorTextWhite87"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        tools:text="bag" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_label_laundry"
@@ -74,7 +88,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/roboto_light"
-        android:text="@string/label_clothes_type"
+        android:text="@string/label_title_type_wash"
         android:textColor="@color/colorTextWhite87"
         android:textSize="20sp"
         tools:text="Escolha o tipo de lavagem" />
