--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -25,8 +25,8 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
-            android:text="Alvin, selecione o local"
-            tools:text="Alvin, selecione o local" />
+            android:text="Selecione o local, "
+            tools:text="Selecione o local, " />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_local"
