--- a/app/src/main/res/navigation/signup_person_navigation_graph.xml
+++ b/app/src/main/res/navigation/signup_person_navigation_graph.xml
@@ -12,7 +12,10 @@
         tools:layout="@layout/fragment_person_name_bottom_sheet">
         <action
             android:id="@+id/action_personNameBottomSheet_to_personEmailBottomSheet"
-            app:destination="@id/personEmailBottomSheet">
+            app:destination="@id/personEmailBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -25,7 +28,10 @@
         tools:layout="@layout/fragment_person_email_bottom_sheet">
         <action
             android:id="@+id/action_personEmailBottomSheet_to_personDocumentBottomSheet"
-            app:destination="@id/personDocumentBottomSheet">
+            app:destination="@id/personDocumentBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -38,7 +44,10 @@
         tools:layout="@layout/fragment_person_password_bottom_sheet">
         <action
             android:id="@+id/action_personPasswordBottomSheet_to_personZoneBottomSheet"
-            app:destination="@id/personZoneBottomSheet">
+            app:destination="@id/personZoneBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -51,7 +60,10 @@
         tools:layout="@layout/fragment_person_document_bottom_sheet">
         <action
             android:id="@+id/action_personDocumentBottomSheet_to_personTelephoneBottomSheet"
-            app:destination="@id/personTelephoneBottomSheet">
+            app:destination="@id/personTelephoneBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -64,7 +76,10 @@
         tools:layout="@layout/fragment_person_telephone_bottom_sheet">
         <action
             android:id="@+id/action_personTelephoneBottomSheet_to_personPasswordBottomSheet"
-            app:destination="@id/personPasswordBottomSheet">
+            app:destination="@id/personPasswordBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -77,7 +92,10 @@
         tools:layout="@layout/fragment_person_zone_bottom_sheet">
         <action
             android:id="@+id/action_personZoneBottomSheet_to_personAddressBottomSheet"
-            app:destination="@id/personAddressBottomSheet">
+            app:destination="@id/personAddressBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -90,7 +108,10 @@
         tools:layout="@layout/fragment_person_address_bottom_sheet">
         <action
             android:id="@+id/action_personAddressBottomSheet_to_personAddressNumberBottomSheet"
-            app:destination="@id/personAddressNumberBottomSheet">
+            app:destination="@id/personAddressNumberBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -103,7 +124,10 @@
         tools:layout="@layout/fragment_person_address_number_bottom_sheet">
         <action
             android:id="@+id/action_personAddressNumberBottomSheet_to_personNeighborhoodBottomSheet"
-            app:destination="@id/personNeighborhoodBottomSheet">
+            app:destination="@id/personNeighborhoodBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -116,7 +140,10 @@
         tools:layout="@layout/fragment_person_neighborhood_bottom_sheet">
         <action
             android:id="@+id/action_personNeighborhoodBottomSheet_to_personCityBottomSheet"
-            app:destination="@id/personCityBottomSheet">
+            app:destination="@id/personCityBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -129,7 +156,10 @@
         tools:layout="@layout/fragment_person_city_bottom_sheet">
         <action
             android:id="@+id/action_personCityBottomSheet_to_personStateBottomSheet"
-            app:destination="@id/personStateBottomSheet">
+            app:destination="@id/personStateBottomSheet"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true">
             <argument
                 android:name="person"
                 app:argType="br.com.washi.signup.data.PersonRequest" />
@@ -142,7 +172,10 @@
         tools:layout="@layout/fragment_person_state_bottom_sheet">
         <action
             android:id="@+id/action_personStateBottomSheet_to_solicitation_navigation_graph"
-            app:destination="@id/solicitation_navigation_graph" />
+            app:destination="@id/solicitation_navigation_graph"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signup_person_navigation_graph"
+            app:popUpToInclusive="true" />
     </dialog>
     <include app:graph="@navigation/home_navigation_graph" />
 </navigation>
