--- a/app/src/main/res/layout/content_wash_bottomsheet.xml
+++ b/app/src/main/res/layout/content_wash_bottomsheet.xml
@@ -73,7 +73,7 @@
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/et_quantity_clothes"
         android:fontFamily="@font/roboto_light"
-        android:text="bag"
+        android:text="@string/label_title_bag"
         android:textColor="@color/colorTextWhite87"
         android:textSize="20sp"
         android:visibility="invisible"
@@ -126,6 +126,7 @@
             android:text="@string/label_aproximated_amount"
             android:textColor="@color/colorTextWhite87"
             android:textSize="20sp"
+            android:visibility="gone"
             tools:text="Valor aproximado" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -137,6 +138,7 @@
             android:text="@string/label_amount_value"
             android:textColor="@color/colorTextWhite87"
             android:textSize="20sp"
+            android:visibility="gone"
             tools:text="R$ 0,00" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
